# CYTrucks

./: README.md  constant.sh  data.txt  makefile  note.txt  sample.csv  shellD.sh  trucksanalyse.sh
data/: data10k.csv
gnuPlot/: test.gn  test2.gn
plot/: plot_option_d1.plt  plot_option_d2.plt  plot_option_l.plt  plot_option_s.plt  plot_option_t.plt
printSH/: printHelp.txt
progC/: main.c
progc/: avl.c  avl.h  avlS.c  avlS.h  avlT.c  avlT.h  avlT2.h  inputFile.c  inputFile.h  main  main.c  mainD.c  openCSV.c  processS.h  processT.h  processT2.h  processes.c  processes.h
progc/include/: avlS.h  avlT.h  inputFile.h  processes.h
progc/src/: avlS.c  avlT.c  inputFile.c  main.c  processes.c
temp/: D1plot.txt  D2plot.txt  Lplot.txt  OutputForProcessT.txt  TtempC.txt  lplot.txt  splot.txt
