# Exemple de script plot_script.gp
set terminal pngcairo size 800,600 enhanced font 'Verdana,12'
set output 'histogramme_vertical.png'

set title "Nombre de trajets par conducteur"
set xlabel "Conducteurs"
set ylabel "Nombre de trajets"
set xtics rotate by -45

# Création de l'histogramme vertical
plot 'data.txt' using 0:1:xtic(2) with boxes lc rgb "skyblue" notitle